--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
         <div class="bottom-header">
             <div class="ontdek">
                 <div class="gf19_container">
-                    <img src="./static/media/gf19.svg" alt="#gf19">
+                    <svg width="107" height="26" xmlns="http://www.w3.org/2000/svg">
+                        <g fill="#000" fill-rule="evenodd">
+                            <path
+                                d="M1.432 25.936l1.52-7.288H0v-2.549h3.474l1.293-6.21H0v-2.55h5.29L6.81 0h2.62L7.91 7.34h5.5L14.93 0h2.636l-1.519 7.34h3.021v2.548h-3.544l-1.31 6.211h4.854v2.549h-5.38l-1.518 7.288H9.552l1.502-7.288H5.569L4.05 25.936H1.432zm4.662-9.837h5.483l1.31-6.21H7.386l-1.292 6.21zM21.346 13.245c0-7.533 5.686-12.753 12.552-12.753 6.365 0 9.977 3.644 11.264 7.358l-3.647 1.436c-1.216-3.223-3.47-5.536-7.689-5.536-4.398 0-8.654 3.224-8.654 9.46 0 6.097 3.505 9.6 8.511 9.6 4.828 0 7.51-3.223 7.724-6.166h-8.654v-3.223h12.338v12.088h-3.469c0-1.892.715-3.854 1.395-5.22h-1.681c-.68 1.821-2.825 5.71-8.69 5.71-6.616.002-11.3-4.905-11.3-12.753zM50.991.981h18.202v3.223H54.567v7.779h11.515v3.188H54.567v10.337h-3.576z"
+                                fill-rule="nonzero" />
+                            <path
+                                d="M86.798 22.223v3.415H73.793v-3.415h4.726V4.768c-.184.276-.488.581-.914.915-.425.333-.903.655-1.431.965-.53.31-1.076.57-1.639.777-.563.207-1.075.31-1.535.31V4.217c.62 0 1.253-.167 1.897-.5.644-.334 1.23-.702 1.76-1.105.528-.402.965-.776 1.31-1.12.345-.346.53-.541.552-.587h3.898v21.318h4.381zM89.006 9.46c0-1.196.23-2.311.69-3.346a8.405 8.405 0 011.88-2.69 8.78 8.78 0 012.81-1.795 9.207 9.207 0 013.485-.655c1.357 0 2.587.247 3.69.742a7.67 7.67 0 012.812 2.138c.77.932 1.368 2.064 1.794 3.398.425 1.334.638 2.852.638 4.553 0 2.346-.218 4.398-.655 6.158-.437 1.759-1.064 3.236-1.88 4.432-.817 1.196-1.8 2.093-2.95 2.69-1.15.599-2.426.898-3.829.898-1.586 0-3.03-.362-4.329-1.087-1.299-.724-2.351-1.742-3.156-3.053l2.242-2.345a5.96 5.96 0 002.208 2.294 5.878 5.878 0 003.07.845c1.725 0 3.104-.725 4.14-2.173 1.034-1.45 1.563-3.496 1.586-6.14-.483 1.034-1.236 1.85-2.26 2.449-1.023.598-2.19.897-3.5.897a8.713 8.713 0 01-3.347-.639 8.416 8.416 0 01-2.69-1.742 8.107 8.107 0 01-1.794-2.604 7.969 7.969 0 01-.655-3.225zm8.83-5.278a4.87 4.87 0 00-2 .414 5.246 5.246 0 00-1.639 1.138 5.55 5.55 0 00-1.121 1.673 4.99 4.99 0 00-.414 2.018c0 .713.138 1.38.414 2a5.333 5.333 0 002.777 2.76 4.99 4.99 0 002.018.414 4.99 4.99 0 002.018-.413 5.49 5.49 0 001.656-1.104 5.126 5.126 0 001.12-1.639 4.908 4.908 0 00.415-1.983c0-.713-.138-1.392-.414-2.035a5.34 5.34 0 00-1.139-1.69 5.396 5.396 0 00-1.673-1.139 4.99 4.99 0 00-2.018-.414z" />
+                        </g>
+                    </svg>
                 </div>
-                <svg viewBox="0 0 393 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="ontdek_svg" viewBox="0 0 393 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M0 52.1648C0 33.6173 12.7001 21.4456 30.3647 21.4456C48.0294 21.4456 60.7295 33.6173 60.7295 52.1648C60.7295 71.0601 48.0294 83 30.3647 83C12.7001 83 0 70.0168 0 52.1648ZM43.6421 52.3967C43.6421 40.4567 38.2157 34.4288 30.3647 34.4288C22.5138 34.4288 17.0874 40.4567 17.0874 52.3967C17.0874 64.3366 22.5138 69.9009 30.3647 69.9009C38.2157 69.9009 43.6421 64.3366 43.6421 52.3967Z"
                         fill="white" />
@@ -52,10 +60,18 @@
             <div class="fullscreen_nav">
                 <div class="fullscreen_nav-top">
                     <input type="text" placeholder="Doorzoek het programma...">
-                    <button>search</button>
-                    <h4>NL <span><svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1.132L1.06087 0L4.5015 3.7356L7.93913 0L9 1.132L4.5015 6L0 1.132Z" fill="black"/>
+                    <button><svg width="22" height="22" viewBox="0 0 18 18" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M6.85875 13.7175C3.07725 13.7175 0 10.641 0 6.85875C0 3.0765 3.07725 0 6.85875 0C10.6403 0 13.7175 3.07725 13.7175 6.85875C13.7175 10.6403 10.641 13.7175 6.85875 13.7175ZM6.85875 2.34225C4.368 2.34225 2.34225 4.36875 2.34225 6.85875C2.34225 9.34875 4.36875 11.3752 6.85875 11.3752C9.34875 11.3752 11.376 9.34875 11.376 6.85875C11.376 4.36875 9.3495 2.34225 6.85875 2.34225ZM13.806 11.6745C13.1933 12.5565 12.417 13.3155 11.5215 13.9103L15.6105 18L17.871 15.7402L13.806 11.6745Z"
+                                fill="white" />
                         </svg>
+                    </button>
+                    <h4>NL <span><svg width="9" height="6" viewBox="0 0 9 6" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 1.132L1.06087 0L4.5015 3.7356L7.93913 0L9 1.132L4.5015 6L0 1.132Z"
+                                    fill="black" />
+                            </svg>
                         </span></h4>
                 </div>
                 <div class="fullscreen_nav_nav">
@@ -71,7 +87,7 @@
             <div class="calendar">
                 <ul>
                     <li>
-                        <a href="./dag.html">
+                        <a href="./dag.html?day=19">
                             <h2>Vr</h2><span>19 Jul</span>
                         </a>
                     </li>
@@ -171,14 +187,14 @@
                         <img src="./static/media/news_article1.png" alt="news_article1">
                         <span>21/07</span>
                     </div>
-                    <h2>Prijs voor strafste straatartiesten en muzikanten</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum animi optio beatae deserunt. Ipsa
-                        quis
-                        reprehenderit porro error sequi debitis eligendi cumque molestias temporibus. Maiores molestias
-                        provident maxime mollitia? Itaque?</p>
-                    <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M8.683 0L6.785 1.885l4.118 4.118H0v2.661h10.903l-4.118 4.117 1.898 1.886L16 7.333z"
-                            fill="#000" fill-rule="nonzero" /></svg>
+                    <div>
+                        <h2>Genste Feesten 2019, digitaal en creatief alternatief</h2>
+                        <p>Dit jaar zal je, omwille van welgekende redenen, niet kunnen verbroederen op een Genste Feestenplein</p>
+                        <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.683 0L6.785 1.885l4.118 4.118H0v2.661h10.903l-4.118 4.117 1.898 1.886L16 7.333z"
+                                fill="#000" fill-rule="nonzero" />
+                        </svg>
+                    </div>
                 </a>
             </article>
             <article>
@@ -187,11 +203,8 @@
                         <img src="./static/media/news_article2.png" alt="news_article1">
                         <span>21/07</span>
                     </div>
-                    <h2>Gratis muziek op zondag</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum animi optio beatae deserunt. Ipsa
-                        quis
-                        reprehenderit porro error sequi debitis eligendi cumque molestias temporibus. Maiores molestias
-                        provident maxime mollitia? Itaque?</p>
+                    <h2>Livestreams op zondag</h2>
+                    <p>West-Vlaamse indie pop, swing, surf en rock & roll, go's party ... ook vanavond zijn er verschillende livestreams te volgen.</p>
                     <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.683 0L6.785 1.885l4.118 4.118H0v2.661h10.903l-4.118 4.117 1.898 1.886L16 7.333z"
                             fill="#000" fill-rule="nonzero" /></svg>
@@ -203,11 +216,8 @@
                         <img src="./static/media/news_article3.png" alt="news_article1">
                         <span>21/07</span>
                     </div>
-                    <h2>Drie eeuwen grafische industrie</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum animi optio beatae deserunt. Ipsa
-                        quis
-                        reprehenderit porro error sequi debitis eligendi cumque molestias temporibus. Maiores molestias
-                        provident maxime mollitia? Itaque?</p>
+                    <h2>The Lunatics</h2>
+                    <p>Sinds jaar en dag een vatse waarde in de improwereld</p>
                     <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.683 0L6.785 1.885l4.118 4.118H0v2.661h10.903l-4.118 4.117 1.898 1.886L16 7.333z"
                             fill="#000" fill-rule="nonzero" /></svg>
@@ -275,6 +285,30 @@
         <div class="footer_image">
             <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
             <p>Volg de Gentse feesten op alle social media kanalen</p>
+            <div class="footer_social_media">
+                <svg class="footer_twitter_logo" width="32" height="32" viewBox="0 0 65 65" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M58.3187 13.4578C58.3599 14.0484 58.36 14.6391 58.36 15.2297C58.36 33.2437 44.9558 54 20.4569 54C12.9093 54 5.89788 51.764 0 47.8829C1.07238 48.0094 2.10337 48.0516 3.21701 48.0516C9.44472 48.0516 15.1777 45.9001 19.7558 42.2297C13.8991 42.1031 8.99111 38.1797 7.30009 32.7797C8.12503 32.9062 8.94985 32.9906 9.81605 32.9906C11.0121 32.9906 12.2082 32.8218 13.3218 32.5266C7.21769 31.2609 2.63949 25.7765 2.63949 19.1531V18.9844C4.41291 19.9969 6.47527 20.6297 8.66103 20.714C5.07281 18.2671 2.72201 14.0906 2.72201 9.36553C2.72201 6.83433 3.38179 4.51401 4.53669 2.489C11.0945 10.7577 20.9518 16.1577 32.005 16.7484C31.7988 15.7359 31.6751 14.6813 31.6751 13.6266C31.6751 6.11712 37.6142 0 44.9968 0C48.8325 0 52.2969 1.64531 54.7303 4.30312C57.7411 3.71253 60.6281 2.57341 63.1853 1.01251C62.1953 4.17664 60.092 6.83446 57.3287 8.52184C60.0096 8.22667 62.6079 7.46713 65 6.41255C63.1856 9.11244 60.917 11.517 58.3187 13.4578Z"
+                        fill="black" />
+                </svg>
+                <svg class="footer_facebook_logo" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z"
+                        fill="#000" fill-rule="nonzero" />
+                </svg>
+                <svg class="footer_flickr_logo" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="#000" fill-rule="evenodd">
+                        <rect x="5.7" y="9" width="6" height="6" rx="3" />
+                        <rect x="13.3" y="9" width="6" height="6" rx="3" />
+                    </g>
+                </svg>
+                <svg class="footer_youtube_logo" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z"
+                        fill="#000" fill-rule="nonzero" />
+                </svg>
+            </div>
         </div>
     </footer>
     <div class="cookies">
