--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
@@ -286,28 +286,12 @@
             <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
             <p>Volg de Gentse feesten op alle social media kanalen</p>
             <div class="footer_social_media">
-                <svg class="footer_twitter_logo" width="32" height="32" viewBox="0 0 65 65" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M58.3187 13.4578C58.3599 14.0484 58.36 14.6391 58.36 15.2297C58.36 33.2437 44.9558 54 20.4569 54C12.9093 54 5.89788 51.764 0 47.8829C1.07238 48.0094 2.10337 48.0516 3.21701 48.0516C9.44472 48.0516 15.1777 45.9001 19.7558 42.2297C13.8991 42.1031 8.99111 38.1797 7.30009 32.7797C8.12503 32.9062 8.94985 32.9906 9.81605 32.9906C11.0121 32.9906 12.2082 32.8218 13.3218 32.5266C7.21769 31.2609 2.63949 25.7765 2.63949 19.1531V18.9844C4.41291 19.9969 6.47527 20.6297 8.66103 20.714C5.07281 18.2671 2.72201 14.0906 2.72201 9.36553C2.72201 6.83433 3.38179 4.51401 4.53669 2.489C11.0945 10.7577 20.9518 16.1577 32.005 16.7484C31.7988 15.7359 31.6751 14.6813 31.6751 13.6266C31.6751 6.11712 37.6142 0 44.9968 0C48.8325 0 52.2969 1.64531 54.7303 4.30312C57.7411 3.71253 60.6281 2.57341 63.1853 1.01251C62.1953 4.17664 60.092 6.83446 57.3287 8.52184C60.0096 8.22667 62.6079 7.46713 65 6.41255C63.1856 9.11244 60.917 11.517 58.3187 13.4578Z"
-                        fill="black" />
-                </svg>
-                <svg class="footer_facebook_logo" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z"
-                        fill="#000" fill-rule="nonzero" />
-                </svg>
-                <svg class="footer_flickr_logo" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <g fill="#000" fill-rule="evenodd">
-                        <rect x="5.7" y="9" width="6" height="6" rx="3" />
-                        <rect x="13.3" y="9" width="6" height="6" rx="3" />
-                    </g>
-                </svg>
-                <svg class="footer_youtube_logo" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z"
-                        fill="#000" fill-rule="nonzero" />
-                </svg>
+                <div class="footer_social_media">
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M21.37 7.277c.014.21.014.419.014.628 0 6.391-4.864 13.755-13.755 13.755-2.739 0-5.283-.793-7.424-2.17.39.045.764.06 1.168.06 2.26 0 4.34-.763 6.002-2.066a4.843 4.843 0 01-4.52-3.352c.299.045.598.074.913.074.434 0 .868-.06 1.272-.164a4.835 4.835 0 01-3.877-4.745v-.06c.644.36 1.392.584 2.185.614a4.831 4.831 0 01-2.155-4.026c0-.898.24-1.721.659-2.44a13.742 13.742 0 009.968 5.059 5.46 5.46 0 01-.12-1.108 4.832 4.832 0 014.835-4.834c1.392 0 2.649.584 3.532 1.527a9.518 9.518 0 003.068-1.168 4.821 4.821 0 01-2.125 2.664 9.692 9.692 0 002.784-.748 10.391 10.391 0 01-2.425 2.5z" fill="#000" fill-rule="nonzero"/></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z" fill="#000" fill-rule="nonzero"/></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="#000" fill-rule="evenodd"><rect x="5.7" y="9" width="6" height="6" rx="3"/><rect x="13.3" y="9" width="6" height="6" rx="3"/></g></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z" fill="#000" fill-rule="nonzero"/></svg>
+                </div>
             </div>
         </div>
     </footer>
@@ -318,6 +302,7 @@
         </p>
         <button>Cookie instellingen</button>
     </div>
+    <script src="./static/js/buildUI.js"></script>
     <script src="./static/js/main.js"></script>
 </body>
 
