Added list with categories and events

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header>
         <div class="top-header">
             <div class="top-header__content">
-                <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+                <a href="./index.html">
+                    <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+                </a>
                 <svg class="menu" viewbox="0 0 210 180" xmlns="http://www.w3.org/2000/svg">
                     <g fill="#000" fill-rule="evenodd">
                         <rect width="210" height="30" rx="15" />
@@ -148,7 +150,7 @@
                         fill="black" />
                 </svg>
                 <ul class="navigation">
-                    <li class="nav_item">Home</li>
+                    <li class="nav_item"><a href="./index.html">Home</a></li>
                     <li class="nav_item">Zoeken</li>
                     <li class="program">Programma <svg class="icon_dropdown_program" width="18" height="12"
                             viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -189,7 +191,8 @@
                     </div>
                     <div>
                         <h2>Genste Feesten 2019, digitaal en creatief alternatief</h2>
-                        <p>Dit jaar zal je, omwille van welgekende redenen, niet kunnen verbroederen op een Genste Feestenplein</p>
+                        <p>Dit jaar zal je, omwille van welgekende redenen, niet kunnen verbroederen op een Genste
+                            Feestenplein</p>
                         <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8.683 0L6.785 1.885l4.118 4.118H0v2.661h10.903l-4.118 4.117 1.898 1.886L16 7.333z"
                                 fill="#000" fill-rule="nonzero" />
@@ -204,7 +207,8 @@
                         <span>21/07</span>
                     </div>
                     <h2>Livestreams op zondag</h2>
-                    <p>West-Vlaamse indie pop, swing, surf en rock & roll, go's party ... ook vanavond zijn er verschillende livestreams te volgen.</p>
+                    <p>West-Vlaamse indie pop, swing, surf en rock & roll, go's party ... ook vanavond zijn er
+                        verschillende livestreams te volgen.</p>
                     <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.683 0L6.785 1.885l4.118 4.118H0v2.661h10.903l-4.118 4.117 1.898 1.886L16 7.333z"
                             fill="#000" fill-rule="nonzero" /></svg>
@@ -287,10 +291,24 @@
             <p>Volg de Gentse feesten op alle social media kanalen</p>
             <div class="footer_social_media">
                 <div class="footer_social_media">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M21.37 7.277c.014.21.014.419.014.628 0 6.391-4.864 13.755-13.755 13.755-2.739 0-5.283-.793-7.424-2.17.39.045.764.06 1.168.06 2.26 0 4.34-.763 6.002-2.066a4.843 4.843 0 01-4.52-3.352c.299.045.598.074.913.074.434 0 .868-.06 1.272-.164a4.835 4.835 0 01-3.877-4.745v-.06c.644.36 1.392.584 2.185.614a4.831 4.831 0 01-2.155-4.026c0-.898.24-1.721.659-2.44a13.742 13.742 0 009.968 5.059 5.46 5.46 0 01-.12-1.108 4.832 4.832 0 014.835-4.834c1.392 0 2.649.584 3.532 1.527a9.518 9.518 0 003.068-1.168 4.821 4.821 0 01-2.125 2.664 9.692 9.692 0 002.784-.748 10.391 10.391 0 01-2.425 2.5z" fill="#000" fill-rule="nonzero"/></svg>
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z" fill="#000" fill-rule="nonzero"/></svg>
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="#000" fill-rule="evenodd"><rect x="5.7" y="9" width="6" height="6" rx="3"/><rect x="13.3" y="9" width="6" height="6" rx="3"/></g></svg>
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z" fill="#000" fill-rule="nonzero"/></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M21.37 7.277c.014.21.014.419.014.628 0 6.391-4.864 13.755-13.755 13.755-2.739 0-5.283-.793-7.424-2.17.39.045.764.06 1.168.06 2.26 0 4.34-.763 6.002-2.066a4.843 4.843 0 01-4.52-3.352c.299.045.598.074.913.074.434 0 .868-.06 1.272-.164a4.835 4.835 0 01-3.877-4.745v-.06c.644.36 1.392.584 2.185.614a4.831 4.831 0 01-2.155-4.026c0-.898.24-1.721.659-2.44a13.742 13.742 0 009.968 5.059 5.46 5.46 0 01-.12-1.108 4.832 4.832 0 014.835-4.834c1.392 0 2.649.584 3.532 1.527a9.518 9.518 0 003.068-1.168 4.821 4.821 0 01-2.125 2.664 9.692 9.692 0 002.784-.748 10.391 10.391 0 01-2.425 2.5z"
+                            fill="#000" fill-rule="nonzero" /></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z"
+                            fill="#000" fill-rule="nonzero" /></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <g fill="#000" fill-rule="evenodd">
+                            <rect x="5.7" y="9" width="6" height="6" rx="3" />
+                            <rect x="13.3" y="9" width="6" height="6" rx="3" />
+                        </g>
+                    </svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z"
+                            fill="#000" fill-rule="nonzero" /></svg>
                 </div>
             </div>
         </div>
