--- a/dag.html
+++ b/dag.html
@@ -14,7 +14,9 @@
         <div class="day-header">
             <div class="top-header">
                 <div class="top-header__content">
-                    <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+                    <a href="./index.html">
+                        <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+                    </a>
                     <svg class="menu" viewbox="0 0 210 180" xmlns="http://www.w3.org/2000/svg">
                         <g fill="#000" fill-rule="evenodd">
                             <rect width="210" height="30" rx="15" />
@@ -177,7 +179,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main id="main">
         <div class="day_item-container">
             <div class="day_item-list">
             </div>
@@ -196,28 +198,28 @@
                         </svg>
                         <span>Categorie</span></li>
                     <li>
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                                viewBox="0 0 32 32">
-                                <path
-                                    d="M16.5 10.568c-2.209 0-4 1.791-4 4s1.791 4 4 4v0c2.209 0 4-1.791 4-4s-1.791-4-4-4v0M16.5 13.568c0.551 0 1 0.45 1 1s-0.449 1-1 1-1-0.449-1-1c0-0.55 0.449-1 1-1M16.5 3c-6.351 0-11.5 5.15-11.5 11.5 0 8.363 11.5 14.636 11.5 14.636s11.5-6.273 11.5-14.636c0-6.35-5.149-11.5-11.5-11.5M16.5 6c4.687 0 8.5 3.813 8.5 8.5 0 4.592-5.253 9.003-8.5 11.131-3.249-2.13-8.5-6.54-8.5-11.13 0-4.689 3.813-8.501 8.5-8.501">
-                                </path>
-                            </svg>
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            viewBox="0 0 32 32">
+                            <path
+                                d="M16.5 10.568c-2.209 0-4 1.791-4 4s1.791 4 4 4v0c2.209 0 4-1.791 4-4s-1.791-4-4-4v0M16.5 13.568c0.551 0 1 0.45 1 1s-0.449 1-1 1-1-0.449-1-1c0-0.55 0.449-1 1-1M16.5 3c-6.351 0-11.5 5.15-11.5 11.5 0 8.363 11.5 14.636 11.5 14.636s11.5-6.273 11.5-14.636c0-6.35-5.149-11.5-11.5-11.5M16.5 6c4.687 0 8.5 3.813 8.5 8.5 0 4.592-5.253 9.003-8.5 11.131-3.249-2.13-8.5-6.54-8.5-11.13 0-4.689 3.813-8.501 8.5-8.501">
+                            </path>
+                        </svg>
                         <span>Orginisatoren</span></li>
                     <li>
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                                viewBox="0 0 32 32">
-                                <path
-                                    d="M20.56 18.44c0.294 0.275 0.477 0.665 0.477 1.097 0 0.828-0.672 1.5-1.5 1.5-0.433 0-0.823-0.183-1.097-0.477l-0.001-0.001-3.499-3.497c-0.137-0.137-0.248-0.301-0.324-0.483l-0.004-0.010-0.006-0.023c-0.067-0.162-0.106-0.35-0.107-0.547v-7c0-0.828 0.672-1.5 1.5-1.5s1.5 0.672 1.5 1.5v6.379l3.060 3.060zM16 27c-6.067 0-11-4.934-11-11s4.933-11 11-11 11 4.934 11 11-4.934 11-11 11zM16 2c-7.733 0-14 6.268-14 14 0 7.733 6.268 14 14 14 7.733 0 14-6.267 14-14 0-7.732-6.267-14-14-14z">
-                                </path>
-                            </svg>
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            viewBox="0 0 32 32">
+                            <path
+                                d="M20.56 18.44c0.294 0.275 0.477 0.665 0.477 1.097 0 0.828-0.672 1.5-1.5 1.5-0.433 0-0.823-0.183-1.097-0.477l-0.001-0.001-3.499-3.497c-0.137-0.137-0.248-0.301-0.324-0.483l-0.004-0.010-0.006-0.023c-0.067-0.162-0.106-0.35-0.107-0.547v-7c0-0.828 0.672-1.5 1.5-1.5s1.5 0.672 1.5 1.5v6.379l3.060 3.060zM16 27c-6.067 0-11-4.934-11-11s4.933-11 11-11 11 4.934 11 11-4.934 11-11 11zM16 2c-7.733 0-14 6.268-14 14 0 7.733 6.268 14 14 14 7.733 0 14-6.267 14-14 0-7.732-6.267-14-14-14z">
+                            </path>
+                        </svg>
                         <span>Nu live</span></li>
                     <li>
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                                viewBox="0 0 32 32">
-                                <path
-                                    d="M13.528 26.080c-4.368-1.762-8.028-7.854-8.028-13.52 0-6.322 4.805-11.060 10.5-11.060s10.5 4.738 10.5 11.060c0 5.667-3.66 11.759-8.028 13.52l1.667 1.944c0.834 0.973 0.143 2.476-1.139 2.476h-6c-1.282 0-1.973-1.503-1.139-2.476l1.667-1.945zM16 23.581c3.435 0 7.5-5.785 7.5-11.022 0-4.656-3.453-8.060-7.5-8.060s-7.5 3.404-7.5 8.060c0 5.237 4.065 11.022 7.5 11.022zM22.328 11.317c0.021 0.093 0.032 0.2 0.032 0.31 0 0.828-0.672 1.5-1.5 1.5-0.731 0-1.34-0.523-1.473-1.215l-0.002-0.009c-0.28-1.403-1.056-2.482-2.063-3.018-0.49-0.254-0.819-0.757-0.819-1.336 0-0.828 0.672-1.5 1.5-1.5 0.267 0 0.518 0.070 0.735 0.192l-0.008-0.004c1.817 0.966 3.144 2.81 3.596 5.080z">
-                                </path>
-                            </svg>
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            viewBox="0 0 32 32">
+                            <path
+                                d="M13.528 26.080c-4.368-1.762-8.028-7.854-8.028-13.52 0-6.322 4.805-11.060 10.5-11.060s10.5 4.738 10.5 11.060c0 5.667-3.66 11.759-8.028 13.52l1.667 1.944c0.834 0.973 0.143 2.476-1.139 2.476h-6c-1.282 0-1.973-1.503-1.139-2.476l1.667-1.945zM16 23.581c3.435 0 7.5-5.785 7.5-11.022 0-4.656-3.453-8.060-7.5-8.060s-7.5 3.404-7.5 8.060c0 5.237 4.065 11.022 7.5 11.022zM22.328 11.317c0.021 0.093 0.032 0.2 0.032 0.31 0 0.828-0.672 1.5-1.5 1.5-0.731 0-1.34-0.523-1.473-1.215l-0.002-0.009c-0.28-1.403-1.056-2.482-2.063-3.018-0.49-0.254-0.819-0.757-0.819-1.336 0-0.828 0.672-1.5 1.5-1.5 0.267 0 0.518 0.070 0.735 0.192l-0.008-0.004c1.817 0.966 3.144 2.81 3.596 5.080z">
+                            </path>
+                        </svg>
                         <span>Kinderen</span></li>
                 </ul>
                 <ul class="day_filter_options_checkbox">
