--- a/dag.html
+++ b/dag.html
@@ -189,7 +189,7 @@
             <div class="day_filter_options">
                 <h2>Bekijk:</h2>
                 <ul class="day_filter_options_filter">
-                    <li>
+                    <li class="first_li">
                         <svg class="first_icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                             viewBox="0 0 32 32">
                             <path
@@ -242,6 +242,28 @@
             <div class="day_filter_categories">
 
             </div>
+        </div>
+        <div class="grid_toggle">
+            <svg class="grid_layout" width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="grid" fill="#000000" fill-rule="nonzero">
+                        <path
+                            d="M5,5 L0,5 L0,0 L5,0 L5,5 Z M12.5,0 L7.5,0 L7.5,5 L12.5,5 L12.5,0 Z M20,0 L15,0 L15,5 L20,5 L20,0 Z M5,7.5 L0,7.5 L0,12.5 L5,12.5 L5,7.5 Z M12.5,7.5 L7.5,7.5 L7.5,12.5 L12.5,12.5 L12.5,7.5 Z M20,7.5 L15,7.5 L15,12.5 L20,12.5 L20,7.5 Z M5,15 L0,15 L0,20 L5,20 L5,15 Z M12.5,15 L7.5,15 L7.5,20 L12.5,20 L12.5,15 Z M20,15 L15,15 L15,20 L20,20 L20,15 Z"
+                            id="Shape"></path>
+                    </g>
+                </g>
+            </svg>
+            <svg class="list_layout" width="24px" height="20px" viewBox="0 0 24 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="list-(1)" fill="#000000" fill-rule="nonzero">
+                        <path
+                            d="M4,20 L0,20 L0,16 L4,16 L4,20 Z M4,8 L0,8 L0,12 L4,12 L4,8 Z M4,0 L0,0 L0,4 L4,4 L4,0 Z M7,0 L7,4 L24,4 L24,0 L7,0 Z M7,12 L24,12 L24,8 L7,8 L7,12 Z M7,20 L24,20 L24,16 L7,16 L7,20 Z"
+                            id="Shape"></path>
+                    </g>
+                </g>
+            </svg>
         </div>
 
         <div class="events_per_category">
