finished day page

--- a/index.html
+++ b/index.html
@@ -94,47 +94,47 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=20">
                             <h2>Za</h2><span>20 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=21">
                             <h2>Zo</h2><span>21 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=22">
                             <h2>Ma</h2><span>22 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=23">
                             <h2>Di</h2><span>23 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=24">
                             <h2>Wo</h2><span>24 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=25">
                             <h2>Do</h2><span>25 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=26">
                             <h2>Vr</h2><span>26 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=27">
                             <h2>Za</h2><span>27 Jul</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dag.html?day=28">
                             <h2>Zo</h2><span>28 Jul</span>
                         </a>
                     </li>
@@ -158,17 +158,17 @@
                                 fill="black" />
                         </svg>
                         <ul class="program_dropdown">
-                            <li><a href="#">Vrijdag 19 juli</a></li>
-                            <li><a href="#">Zaterdag 20 juli</a></li>
-                            <li><a href="#">Zondag 21 juli</a></li>
-                            <li><a href="#">Maandag 22 juli</a></li>
-                            <li><a href="#">Dinsdag 23 juli</a></li>
-                            <li><a href="#">Woensdag 24 juli</a></li>
-                            <li><a href="#">Donderdag 25 juli</a></li>
-                            <li><a href="#">Vrijdag 26 juli</a></li>
-                            <li><a href="#">Zaterdag 27 juli</a></li>
-                            <li><a href="#">Zondag 28 juli</a></li>
-                            <li><a href="#">Programma</a></li>
+                            <li><a href="./dag.html?day=19">Vrijdag 19 juli</a></li>
+                            <li><a href="./dag.html?day=20">Zaterdag 20 juli</a></li>
+                            <li><a href="./dag.html?day=21">Zondag 21 juli</a></li>
+                            <li><a href="./dag.html?day=22">Maandag 22 juli</a></li>
+                            <li><a href="./dag.html?day=23">Dinsdag 23 juli</a></li>
+                            <li><a href="./dag.html?day=24">Woensdag 24 juli</a></li>
+                            <li><a href="./dag.html?day=25">Donderdag 25 juli</a></li>
+                            <li><a href="./dag.html?day=26">Vrijdag 26 juli</a></li>
+                            <li><a href="./dag.html?day=27">Zaterdag 27 juli</a></li>
+                            <li><a href="./dag.html?day=28">Zondag 28 juli</a></li>
+                            <li><a href="./dag.html?day=29">Programma</a></li>
                         </ul>
                     </li>
                     <li class="nav_item">Nieuws</li>
