--- a/dag.html
+++ b/dag.html
@@ -96,47 +96,47 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=20">
                         <h2>Za</h2><span>20 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=21">
                         <h2>Zo</h2><span>21 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=22">
                         <h2>Ma</h2><span>22 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=23">
                         <h2>Di</h2><span>23 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=24">
                         <h2>Wo</h2><span>24 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=25">
                         <h2>Do</h2><span>25 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=26">
                         <h2>Vr</h2><span>26 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=27">
                         <h2>Za</h2><span>27 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=28">
                         <h2>Zo</h2><span>28 Jul</span>
                     </a>
                 </li>
@@ -182,6 +182,22 @@
     <main id="main">
         <div class="day_item-container">
             <div class="day_item-list">
+                <section class="day_items_highlights">
+                    <a class="highlight-item__link" href="#">
+                        <div class="link__top">
+                            <div class="highlight__img">
+                                <img class="highlight__img__img"
+                                    src="${event.image == null ? FALLBACK_IMAGE : event.image.thumb}"
+                                    alt="${event.title}">
+                            </div>
+                        </div>
+                        <div class="highlight-bottom__content">
+                            <span class="bottom__date"><span class="date__time">${event.start} u.</span></span>
+                            <h2 class="bottom__title">${event.title}</h2>
+                            <span class="bottom__loc">${event.location}</span>
+                        </div>
+                    </a>
+                </section>
             </div>
         </div>
 
@@ -244,8 +260,8 @@
             </div>
         </div>
         <div class="grid_toggle">
-            <svg class="grid_layout" width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg class="grid_layout selected" width="20px" height="20px" viewBox="0 0 20 20" version="1.1"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g id="grid" fill="#000000" fill-rule="nonzero">
                         <path
@@ -254,8 +270,8 @@
                     </g>
                 </g>
             </svg>
-            <svg class="list_layout" width="24px" height="20px" viewBox="0 0 24 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg class="list_layout" width="24px" height="20px" viewBox="0 0 24 20" version="1.1"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g id="list-(1)" fill="#000000" fill-rule="nonzero">
                         <path
@@ -317,8 +333,8 @@
         </p>
         <button>Cookie instellingen</button>
     </div>
-    <script src="./static/js/buildUI.js"></script>
     <script src="./static/js/main.js"></script>
+    <script src="./static/js/buildUI.js"></script>
 </body>
 
 </html>
