--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </div>
                 <div class="fullscreen_nav_nav">
                     <ul>
-                        <li><a href="#">Home</a> </li>
-                        <li><a href="#">Programma</a></li>
+                        <li><a href="./index.html">Home</a> </li>
+                        <li><a href="./dag.html?day=19">Programma</a></li>
                         <li><a href="#">Nieuws</a></li>
                         <li><a href="#">Info</a></li>
                     </ul>
@@ -152,7 +152,7 @@
                 <ul class="navigation">
                     <li class="nav_item"><a href="./index.html">Home</a></li>
                     <li class="nav_item">Zoeken</li>
-                    <li class="program">Programma <svg class="icon_dropdown_program" width="18" height="12"
+                    <li class="program"><a href="#">Programma</a><svg class="icon_dropdown_program" width="18" height="12"
                             viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 1.132L1.06087 0L4.5015 3.7356L7.93913 0L9 1.132L4.5015 6L0 1.132Z"
                                 fill="black" />
@@ -168,7 +168,7 @@
                             <li><a href="./dag.html?day=26">Vrijdag 26 juli</a></li>
                             <li><a href="./dag.html?day=27">Zaterdag 27 juli</a></li>
                             <li><a href="./dag.html?day=28">Zondag 28 juli</a></li>
-                            <li><a href="./dag.html?day=29">Programma</a></li>
+                            <li><a href="./dag.html?day=19">Programma</a></li>
                         </ul>
                     </li>
                     <li class="nav_item">Nieuws</li>
