fixed links in all pages

--- a/detail.html
+++ b/detail.html
@@ -80,8 +80,8 @@
             </div>
             <div class="fullscreen_nav_nav">
                 <ul>
-                    <li><a href="#">Home</a> </li>
-                    <li><a href="#">Programma</a></li>
+                    <li><a href="./index.html">Home</a> </li>
+                    <li><a href="./dag.html?day=19">Programma</a></li>
                     <li><a href="#">Nieuws</a></li>
                     <li><a href="#">Info</a></li>
                 </ul>
@@ -152,7 +152,7 @@
                         fill="black" />
                 </svg>
                 <ul class="navigation">
-                    <li class="nav_item">Home</li>
+                    <li class="nav_item"><a href="./index.html">Home</a></li>
                     <li class="nav_item">Zoeken</li>
                     <li class="program">Programma <svg class="icon_dropdown_program" width="18" height="12"
                             viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -160,17 +160,17 @@
                                 fill="black" />
                         </svg>
                         <ul class="program_dropdown">
-                            <li><a href="#">Vrijdag 19 juli</a></li>
-                            <li><a href="#">Zaterdag 20 juli</a></li>
-                            <li><a href="#">Zondag 21 juli</a></li>
-                            <li><a href="#">Maandag 22 juli</a></li>
-                            <li><a href="#">Dinsdag 23 juli</a></li>
-                            <li><a href="#">Woensdag 24 juli</a></li>
-                            <li><a href="#">Donderdag 25 juli</a></li>
-                            <li><a href="#">Vrijdag 26 juli</a></li>
-                            <li><a href="#">Zaterdag 27 juli</a></li>
-                            <li><a href="#">Zondag 28 juli</a></li>
-                            <li><a href="#">Programma</a></li>
+                            <li><a href="./dag.html?day=19">Vrijdag 19 juli</a></li>
+                            <li><a href="./dag.html?day=20">Zaterdag 20 juli</a></li>
+                            <li><a href="./dag.html?day=21">Zondag 21 juli</a></li>
+                            <li><a href="./dag.html?day=22">Maandag 22 juli</a></li>
+                            <li><a href="./dag.html?day=23">Dinsdag 23 juli</a></li>
+                            <li><a href="./dag.html?day=24">Woensdag 24 juli</a></li>
+                            <li><a href="./dag.html?day=25">Donderdag 25 juli</a></li>
+                            <li><a href="./dag.html?day=26">Vrijdag 26 juli</a></li>
+                            <li><a href="./dag.html?day=27">Zaterdag 27 juli</a></li>
+                            <li><a href="./dag.html?day=28">Zondag 28 juli</a></li>
+                            <li><a href="./dag.html?day=19">Programma</a></li>
                         </ul>
                     </li>
                     <li class="nav_item">Nieuws</li>
