--- a/dag.html
+++ b/dag.html
@@ -286,7 +286,9 @@
     </main>
     <footer>
         <div class="footer_image">
-            <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+            <a href="./index.html">
+                <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+            </a>
             <p>Volg de Gentse feesten op alle social media kanalen</p>
             <div class="footer_social_media">
                 <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
@@ -311,11 +313,13 @@
         </div>
     </footer>
     <div class="cookies">
-        <img src="./static/media/stad_gent_footer_logo.svg" alt="stad_gent_footer_logo">
-        <p><span>Deze website is louter informatief en geldt niet als aanbod</span>, mogelijke fouten op de website
-            zijn niet de aansprakelijkheid van de Stad Gent.
-        </p>
-        <button>Cookie instellingen</button>
+        <div class="cookies_content">
+            <img src="./static/media/stad_gent_footer_logo.svg" alt="stad_gent_footer_logo">
+            <p><span>Deze website is louter informatief en geldt niet als aanbod</span>, mogelijke fouten op de website
+                zijn niet de aansprakelijkheid van de Stad Gent.
+            </p>
+            <button>Cookie instellingen</button>
+        </div>
     </div>
     <script src="./static/js/main.js"></script>
     <script src="./static/js/buildUI.js"></script>
