--- a/detail.html
+++ b/detail.html
@@ -191,9 +191,37 @@
             </div>
         </div>
 
-
-
-
+        <div class="otherEvents">
+            <section class="titles">
+                <div class="highlight-bottom__content">
+                    <span class="bottom__date">19.00 u.</span>
+                    <h2 class="bottom__title">Kinky Star Feesten - Boldie</h2>
+                    <span class="bottom__loc">Kinky Star vzw</span>
+                </div>
+            </section>
+            <section class="titles">
+                <div class="highlight-bottom__content">
+                    <span class="bottom__date">19.00 u.</span>
+                    <h2 class="bottom__title">Kinky Star Feesten - Boldie</h2>
+                    <span class="bottom__loc">Kinky Star vzw</span>
+                </div>
+            </section>
+            <section class="titles">
+                <div class="highlight-bottom__content">
+                    <span class="bottom__date">19.00 u.</span>
+                    <h2 class="bottom__title">Kinky Star Feesten - Boldie</h2>
+                    <span class="bottom__loc">Kinky Star vzw</span>
+                </div>
+            </section>
+            <section class="titles">
+                <div class="highlight-bottom__content">
+                    <span class="bottom__date">19.00 u.</span>
+                    <h2 class="bottom__title">Kinky Star Feesten - Boldie</h2>
+                    <span class="bottom__loc">Kinky Star vzw</span>
+                </div>
+            </section>
+            <button>Alle evenementen van deze organisator</button>
+        </div>
 
         <div class="newsletter">
             <h2>Blijf op de hoogte</h2>
@@ -211,7 +239,9 @@
     </main>
     <footer>
         <div class="footer_image">
-            <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+            <a href="./index.html">
+                <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
+            </a>
             <p>Volg de Gentse feesten op alle social media kanalen</p>
             <div class="footer_social_media">
                 <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
