--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <ul class="navigation">
                     <li class="nav_item"><a href="./index.html">Home</a></li>
                     <li class="nav_item">Zoeken</li>
-                    <li class="program"><a href="#">Programma</a><svg class="icon_dropdown_program" width="18" height="12"
-                            viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <li class="program"><a href="#">Programma</a><svg class="icon_dropdown_program" width="18"
+                            height="12" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 1.132L1.06087 0L4.5015 3.7356L7.93913 0L9 1.132L4.5015 6L0 1.132Z"
                                 fill="black" />
                         </svg>
@@ -314,11 +314,13 @@
         </div>
     </footer>
     <div class="cookies">
-        <img src="./static/media/stad_gent_footer_logo.svg" alt="stad_gent_footer_logo">
-        <p><span>Deze website is louter informatief en geldt niet als aanbod</span>, mogelijke fouten op de website
-            zijn niet de aansprakelijkheid van de Stad Gent.
-        </p>
-        <button>Cookie instellingen</button>
+        <div class="cookies_content">
+            <img src="./static/media/stad_gent_footer_logo.svg" alt="stad_gent_footer_logo">
+            <p><span>Deze website is louter informatief en geldt niet als aanbod</span>, mogelijke fouten op de website
+                zijn niet de aansprakelijkheid van de Stad Gent.
+            </p>
+            <button>Cookie instellingen</button>
+        </div>
     </div>
     <script src="./static/js/buildUI.js"></script>
     <script src="./static/js/main.js"></script>
