--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="news">
             <article>
-                <a href="#">
+                <a href="./detail.html">
                     <div class="news_image">
                         <img src="./static/media/news_article1.png" alt="news_article1">
                         <span>21/07</span>
@@ -201,7 +201,7 @@
                 </a>
             </article>
             <article>
-                <a href="#">
+                <a href="./detail.html">
                     <div class="news_image">
                         <img src="./static/media/news_article2.png" alt="news_article1">
                         <span>21/07</span>
@@ -215,7 +215,7 @@
                 </a>
             </article>
             <article>
-                <a href="#">
+                <a href="./detail.html">
                     <div class="news_image">
                         <img src="./static/media/news_article3.png" alt="news_article1">
                         <span>21/07</span>
