--- a/detail.html
+++ b/detail.html
@@ -185,9 +185,13 @@
                 <img src="./static/media/news_article1.png" alt=" ">
             </div>
             <div class="detail_info">
-                <h2>Title</h2>
-                <h3>Day date - <span class="start">start</span> > <span class="end">end</span></h3>
-                <p>content</p>
+                <div class="detail_info_time">
+                    <h2 class="detail_title">Genste Feesten 2019, digitaal en creatief alternatief</h2>
+                    <p class="detail_location">STAM Stadsmuseum Gent</p>
+                    <h3 class="detail_date">Day date - <span class="start">start</span> > <span class="end">end</span>
+                    </h3>
+                </div>
+                <p class="detail_desc">Dit jaar zal je, omwille van welgekende redenen, niet kunnen verbroederen op een Genste Feestenplein</p>
             </div>
         </div>
 
@@ -239,38 +243,40 @@
     </main>
     <footer>
         <div class="footer_image">
-            <a href="./index.html">
-                <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
-            </a>
+            <img class="logo" src="./static/media/gentse_feesten_logo.svg" alt="logo">
             <p>Volg de Gentse feesten op alle social media kanalen</p>
             <div class="footer_social_media">
-                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M21.37 7.277c.014.21.014.419.014.628 0 6.391-4.864 13.755-13.755 13.755-2.739 0-5.283-.793-7.424-2.17.39.045.764.06 1.168.06 2.26 0 4.34-.763 6.002-2.066a4.843 4.843 0 01-4.52-3.352c.299.045.598.074.913.074.434 0 .868-.06 1.272-.164a4.835 4.835 0 01-3.877-4.745v-.06c.644.36 1.392.584 2.185.614a4.831 4.831 0 01-2.155-4.026c0-.898.24-1.721.659-2.44a13.742 13.742 0 009.968 5.059 5.46 5.46 0 01-.12-1.108 4.832 4.832 0 014.835-4.834c1.392 0 2.649.584 3.532 1.527a9.518 9.518 0 003.068-1.168 4.821 4.821 0 01-2.125 2.664 9.692 9.692 0 002.784-.748 10.391 10.391 0 01-2.425 2.5z"
-                        fill="#000" fill-rule="nonzero" /></svg>
-                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z"
-                        fill="#000" fill-rule="nonzero" /></svg>
-                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <g fill="#000" fill-rule="evenodd">
-                        <rect x="5.7" y="9" width="6" height="6" rx="3" />
-                        <rect x="13.3" y="9" width="6" height="6" rx="3" />
-                    </g>
-                </svg>
-                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z"
-                        fill="#000" fill-rule="nonzero" /></svg>
+                <div class="footer_social_media">
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M21.37 7.277c.014.21.014.419.014.628 0 6.391-4.864 13.755-13.755 13.755-2.739 0-5.283-.793-7.424-2.17.39.045.764.06 1.168.06 2.26 0 4.34-.763 6.002-2.066a4.843 4.843 0 01-4.52-3.352c.299.045.598.074.913.074.434 0 .868-.06 1.272-.164a4.835 4.835 0 01-3.877-4.745v-.06c.644.36 1.392.584 2.185.614a4.831 4.831 0 01-2.155-4.026c0-.898.24-1.721.659-2.44a13.742 13.742 0 009.968 5.059 5.46 5.46 0 01-.12-1.108 4.832 4.832 0 014.835-4.834c1.392 0 2.649.584 3.532 1.527a9.518 9.518 0 003.068-1.168 4.821 4.821 0 01-2.125 2.664 9.692 9.692 0 002.784-.748 10.391 10.391 0 01-2.425 2.5z"
+                            fill="#000" fill-rule="nonzero" /></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M17.072 13.474l.655-4.269h-4.096v-2.77c0-1.168.572-2.306 2.407-2.306H17.9V.494S16.21.206 14.594.206c-3.373 0-5.578 2.044-5.578 5.746v3.253h-3.75v4.27h3.75v10.32h4.615v-10.32h3.441z"
+                            fill="#000" fill-rule="nonzero" /></svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <g fill="#000" fill-rule="evenodd">
+                            <rect x="5.7" y="9" width="6" height="6" rx="3" />
+                            <rect x="13.3" y="9" width="6" height="6" rx="3" />
+                        </g>
+                    </svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M22.818 6.46a2.86 2.86 0 00-1.996-2.04c-1.76-.482-8.817-.482-8.817-.482s-7.058 0-8.818.482a2.86 2.86 0 00-1.995 2.04C.72 8.26.72 12.017.72 12.017s0 3.756.472 5.556a2.816 2.816 0 001.995 2.008c1.76.482 8.818.482 8.818.482s7.057 0 8.817-.482a2.816 2.816 0 001.996-2.008c.471-1.8.471-5.556.471-5.556s0-3.755-.471-5.555zM9.696 15.427v-6.82l5.9 3.41-5.9 3.41z"
+                            fill="#000" fill-rule="nonzero" /></svg>
+                </div>
             </div>
         </div>
     </footer>
     <div class="cookies">
-        <img src="./static/media/stad_gent_footer_logo.svg" alt="stad_gent_footer_logo">
-        <p><span>Deze website is louter informatief en geldt niet als aanbod</span>, mogelijke fouten op de website
-            zijn niet de aansprakelijkheid van de Stad Gent.
-        </p>
-        <button>Cookie instellingen</button>
+        <div class="cookies_content">
+            <img src="./static/media/stad_gent_footer_logo.svg" alt="stad_gent_footer_logo">
+            <p><span>Deze website is louter informatief en geldt niet als aanbod</span>, mogelijke fouten op de website
+                zijn niet de aansprakelijkheid van de Stad Gent.
+            </p>
+            <button>Cookie instellingen</button>
+        </div>
     </div>
     <script src="./static/js/main.js"></script>
     <script src="./static/js/buildUI.js"></script>
