--- a/detail.html
+++ b/detail.html
@@ -96,47 +96,47 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=20">
                         <h2>Za</h2><span>20 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=21">
                         <h2>Zo</h2><span>21 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=22">
                         <h2>Ma</h2><span>22 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=23">
                         <h2>Di</h2><span>23 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=24">
                         <h2>Wo</h2><span>24 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=25">
                         <h2>Do</h2><span>25 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=26">
                         <h2>Vr</h2><span>26 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=27">
                         <h2>Za</h2><span>27 Jul</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dag.html?day=28">
                         <h2>Zo</h2><span>28 Jul</span>
                     </a>
                 </li>
